# cql2-rs

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASING.md  agents.txt  cql2.pyi  cql2tst.pest  mkdocs.yml  pyproject.toml  versions.json
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  crates-io.yml  docs.yml  npm.yml  pypi.yml  python.yml  release-plz.yml  test.yml
cli/: CHANGELOG.md  Cargo.toml  README.md
cli/src/: lib.rs  main.rs
docs/: cli.md  examples.json  index.md  playground.md  python.md  rust.md
examples/: cql_examples.csv  examples.toml
latest/: index.html  objects.inv  sitemap.xml
latest/search/: search_index.json
python/: Cargo.toml  README.md  cql2.pyi  pyproject.toml
python/src/: lib.rs
python/tests/: conftest.py  test_expr.py
scripts/: buildwasm  duckdb-runner  exampleoptions  lint  test
src/: cql2 copy.pest  cql2.pest  cql2.pest1  datafusion.rs  duckdb.rs  elasticsearch.rs  error.rs  expr.rs  geometry.rs  lib.rs  main.rs  operators.rs  operators.yml  parser.rs  sql.rs  symbols.pest  temporal.rs  validator.rs
tests/: README.md  cql2testdata.ndjson  elasticsearch_expected.txt  elasticsearch_tests.rs  generate-expected  generate_expected_qcounts  geoparquet_fixture.rs  ogc_tests.rs  operators_datafusion.rs  operators_duckdb.rs  operators_expected.txt  operators_filter.rs  operators_tests.txt  reduce_tests.rs  reductions.txt
tests/expected/: clause6_01.json.out  clause6_01.txt.out  clause6_02a.json.out  clause6_02a.txt.out  clause6_02b.json.out  clause6_02b.txt.out  clause6_02c.json.out  clause6_02c.txt.out  clause6_02d.json.out  clause6_02d.txt.out  clause6_03.json.out  clause6_03.txt.out  clause7_01.json.out  clause7_01.txt.out  clause7_02.json.out  clause7_02.txt.out  clause7_03a.json.out  clause7_03a.txt.out  clause7_03b.json.out  clause7_03b.txt.out  clause7_04.json.out  clause7_05.json.out  clause7_07.json.out  clause7_07.txt.out  clause7_10.json.out  clause7_10.txt.out  clause7_12.json.out  clause7_12.txt.out  clause7_13.json.out  clause7_13.txt.out  clause7_15.json.out  clause7_15.txt.out  clause7_16.json.out  clause7_16.txt.out  clause7_17.json.out  clause7_17.txt.out  clause7_18.json.out  clause7_18.txt.out  clause7_19.json.out  clause7_19.txt.out  (+185 more)
tests/expected/json/: clause6_01.txt  clause6_02b.json  clause6_02c.json  clause6_02c.txt  clause6_02d.json  clause6_02d.txt  clause6_03.json  clause6_03.txt  clause7_01.txt  clause7_02.json  clause7_03b.json  clause7_07.txt  clause7_12.json  clause7_12.txt  clause7_13.txt  clause7_15.txt  clause7_16.txt  clause7_17.json  clause7_17.txt  clause7_18.json  clause7_18.txt  example01.json  example01.txt  example02.json  example02.txt  example03.json  example03.txt  example04.json  example05a.json  example05b.txt  example06a.json  example06a.txt  example06b.json  example06b.txt  example07.json  example08.txt  example11.txt  example12.json  example13.json  example13.txt  (+89 more)
tests/expected/text/: clause6_01.json  clause6_02a.json  clause6_02a.txt  clause6_02b.txt  clause6_03.json  clause6_03.txt  clause7_01.json  clause7_02.txt  clause7_03a.json  clause7_03a.txt  clause7_03b.txt  clause7_04.json  clause7_07.json  clause7_10.json  clause7_10.txt  clause7_13.json  clause7_15.json  clause7_16.json  clause7_16.txt  clause7_18.json  clause7_18.txt  clause7_19.json  clause7_19.txt  example04.txt  example05a.txt  example05b.json  example06a.json  example06a.txt  example07.txt  example08.json  example08.txt  example09.json  example09.txt  example10.json  example10.txt  example11.json  (+103 more)
v0.1.0/: 404.html  index.html
v0.1.0/python/: index.html
v0.2.0/: objects.inv  sitemap.xml
v0.2.0/python/: index.html
v0.2.0/search/: search_index.json
v0.3.0/: 404.html  objects.inv  sitemap.xml
v0.3.0/python/: index.html
v0.3.0/search/: search_index.json
v0.3.1/: index.html  sitemap.xml
v0.3.1/cli/: index.html
v0.3.2/: index.html  sitemap.xml
v0.3.3/: 404.html  index.html
v0.3.3-alpha.0/: 404.html  sitemap.xml
v0.3.3-alpha.0/cli/: index.html
v0.3.3-alpha.0/python/: index.html
v0.3.3-alpha.1/: 404.html  index.html  sitemap.xml
v0.3.3-alpha.1/cli/: index.html
v0.3.3-alpha.1/pkg/: cql2_wasm_bg.wasm  index.html  package.json
v0.3.3-alpha.1/playground/: index.html
v0.3.3-alpha.1/python/: index.html
v0.3.3-alpha.1/search/: search_index.json
v0.3.3/cli/: index.html
v0.3.3/pkg/: cql2_wasm.js  cql2_wasm_bg.wasm  index.html  package.json
v0.3.3/python/: index.html
v0.3.3/search/: search_index.json
v0.3.4/: objects.inv  sitemap.xml
v0.3.4/pkg/: cql2_wasm_bg.wasm  package.json
v0.3.4/playground/: index.html
v0.3.4/python/: index.html
v0.3.4/search/: search_index.json
v0.3.5/: sitemap.xml
v0.3.5/pkg/: cql2_wasm_bg.wasm  package.json
v0.3.5/playground/: index.html
v0.3.5/python/: index.html
v0.3.5/search/: search_index.json
v0.3.6/: examples.json  sitemap.xml
v0.3.6/pkg/: cql2_wasm_bg.wasm  package.json
v0.3.7/: objects.inv  sitemap.xml
v0.3.7-beta.0/: index.html  sitemap.xml
v0.3.7-beta.0/pkg/: cql2_wasm_bg.wasm  index.html  package.json
v0.3.7-beta.0/search/: search_index.json
v0.3.7/pkg/: cql2_wasm.js  cql2_wasm_bg.wasm  package.json
v0.3.8/: sitemap.xml
v0.3.8/pkg/: cql2_wasm.js  cql2_wasm_bg.wasm  package.json
v0.3.8/python/: index.html
v0.4.0/: 404.html  sitemap.xml
v0.4.0/cli/: index.html
v0.4.0/pkg/: cql2_wasm.js  cql2_wasm_bg.wasm  package.json
v0.4.0/playground/: index.html
v0.4.0/python/: index.html
v0.4.0/search/: search_index.json
v0.4.1/: 404.html  sitemap.xml
v0.4.1-pypi/: index.html
v0.4.1/cli/: index.html
v0.4.1/pkg/: cql2_wasm.js  cql2_wasm_bg.wasm  index.html  package.json
v0.4.2/: objects.inv  sitemap.xml
v0.4.2/pkg/: cql2_wasm.js  cql2_wasm_bg.wasm  index.html  package.json
v0.4.2/playground/: index.html
v0.4.2/python/: index.html
v0.4.2/search/: search_index.json
wasm/: Cargo.toml  README.md  index.html  package.json
wasm/src/: lib.rs
wasm/tests/: integration.mjs  node.rs  web.rs
wasm/tests/common/: mod.rs
(+1 files in other folders)
