[workspace.package]
version = "0.3.2-beta.0"
authors = [
    "David Bitner <bitner@dbspatial.com>",
    "Pete Gadomski <pete.gadomski@gmail.com>",
]
edition = "2021"
documentation = "https://docs.rs/cql2"
repository = "https://github.com/developmentseed/cql2-rs"
license = "MIT"

[package]
name = "cql2"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "Parse, validate, and convert Common Query Language (CQL2) text and JSON"
documentation = { workspace = true }
readme = "README.md"
homepage = "https://github.com/developmentseed/cql2-rs"
repository = { workspace = true }
license = { workspace = true }
keywords = ["cql2"]

[dependencies]
boon = "0.6.0"
geo-types = "0.7.13"
geojson = "0.24.1"
geozero = "0.14.0"
lazy_static = "1.5"
pest = "2.7"
pest_derive = { version = "2.7", features = ["grammar-extras"] }
pg_escape = "0.1.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
thiserror = "2.0"

[dev-dependencies]
assert-json-diff = "2"
rstest = "0.23"

[workspace]
default-members = [".", "cli"]
members = ["cli", "python"]

[workspace.dependencies]
clap = "4.5"
