[workspace.package]
version = "0.3.4"
authors = [
    "David Bitner <bitner@dbspatial.com>",
    "Pete Gadomski <pete.gadomski@gmail.com>",
]
edition = "2021"
documentation = "https://docs.rs/cql2"
repository = "https://github.com/developmentseed/cql2-rs"
license = "MIT"

[package]
name = "cql2"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "Parse, validate, and convert Common Query Language (CQL2) text and JSON"
documentation = { workspace = true }
readme = "README.md"
homepage = "https://github.com/developmentseed/cql2-rs"
repository = { workspace = true }
license = { workspace = true }
keywords = ["cql2"]


[dependencies]
geo = "0.29.3"
geo-types = "0.7.15"
geojson = "0.24.1"
geozero = "0.14.0"
jiff = "0.2.0"
json_dotpath = "1.1.0"
jsonschema = { version = "0.29.0", default-features = false }
lazy_static = "1.5"
like = "0.3.1"
pest = "2.7"
pest_derive = { version = "2.7", features = ["grammar-extras"] }
pg_escape = "0.1.1"
serde = "1.0"
serde_derive = "1.0.217"
serde_json = { version = "1.0.138", features = ["preserve_order"] }
thiserror = "2.0"
unaccent = "0.1.0"
wkt = "0.12.0"

[dev-dependencies]
assert-json-diff = "2"
rstest = "0.24.0"

[workspace]
default-members = [".", "cli"]
members = ["cli", "python", "wasm"]

[workspace.dependencies]
clap = "4.5.28"
