[workspace.package]
version = "0.5.0-rc1"
authors = [
    "David Bitner <bitner@dbspatial.com>",
    "Pete Gadomski <pete.gadomski@gmail.com>",
]
edition = "2021"
documentation = "https://docs.rs/cql2"
repository = "https://github.com/developmentseed/cql2-rs"
license = "MIT"

[package]
name = "cql2"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "Parse, validate, and convert Common Query Language (CQL2) text and JSON"
documentation = { workspace = true }
readme = "README.md"
homepage = "https://github.com/developmentseed/cql2-rs"
repository = { workspace = true }
license = { workspace = true }
keywords = ["cql2"]

[dependencies]
geo = "0.31.0"
geo-types = "0.7.17"
geojson = "0.24.1"
geozero = "0.14.0"
jiff = "0.2.15"
json_dotpath = "1.1.0"
jsonschema = { version = "0.33.0", default-features = false }
lazy_static = "1.5"
like = "0.3.1"
pest = "2.8.1"
pest_derive = { version = "2.8.1", features = ["grammar-extras"] }
pg_escape = "0.1.1"
serde = "1.0"
serde_json = { version = "1.0.143", features = ["preserve_order"] }
thiserror = "2.0.16"
unaccent = "0.1.0"
wkt = "0.14.0"
sqlparser = { version = "0.58.0", features = ["visitor"] }

[dev-dependencies]
assert-json-diff = "2"
duckdb = { version = "1.3.2", features = ["bundled"] }
rstest = "0.26.1"

[workspace]
default-members = [".", "cli"]
members = ["cli", "python", "wasm"]


[workspace.dependencies]
clap = "4.5.51"

[profile.release]
opt-level = "s"
