[project]
name = "cql2-rs"
version = "0.0.0"
description = "This Python package is non-releaseable and is only used for building the documentation"
requires-python = ">=3.12"

[tool.uv]
dev-dependencies = [
    "mike>=2.1.3",
    "mkdocs-material[imaging]>=9.5.39",
    "mkdocstrings[python]>=0.26.1",
]

[tool.uv.sources]
python = { workspace = true }

[tool.uv.workspace]
members = ["python/"]
