[project]
name = "cql2"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.scripts]
cql2 = "cql2:main"

[tool.uv]
dev-dependencies = [
    "maturin>=1.7.8",
    "mike>=2.1.3",
    "mkdocs-material[imaging]>=9.5.39",
    "mkdocstrings[python]>=0.26.1",
    "mypy>=1.11.2",
    "pytest>=8.3.3",
    "ruff>=0.6.9",
]

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "python/Cargo.toml"
