[package]
name = "cql2-cli"
version = "0.2.0"
authors = ["David Bitner <bitner@dbspatial.com>"]
edition = "2021"
description = "Command line interface for Common Query Language (CQL2)"
readme = "README.md"
homepage = "https://github.com/developmentseed/cql2-rs"
repository = "https://github.com/developmentseed/cql2-rs"
license = "MIT"
keywords = ["cql2"]


[dependencies]
anyhow = "1.0"
clap = { workspace = true, features = ["derive"] }
cql2 = { path = "..", version = "0.2.0" }
serde_json = "1.0"

[[bin]]
name = "cql2"
path = "src/main.rs"
test = false
doc = false
