[package]
name = "cql2-cli"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "Command line interface for Common Query Language (CQL2)"
readme = "README.md"
homepage = "https://github.com/developmentseed/cql2-rs"
repository = { workspace = true }
license = { workspace = true }
keywords = ["cql2"]


[dependencies]
anyhow = "1.0"
clap = { workspace = true, features = ["derive"] }
cql2 = { path = "..", version = "0.3.7-beta.0" }
serde_json = "1.0"

[[bin]]
name = "cql2"
path = "src/main.rs"
test = false
doc = false
