[package]
name = "cql2-python"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "Parse, validate, and convert Common Query Language (CQL2) text and JSON"
readme = "README.md"
homepage = "https://github.com/developmentseed/cql2-rs"
repository = { workspace = true }
license = { workspace = true }
keywords = ["cql2"]
publish = false

[lib]
name = "cql2"
crate-type = ["cdylib"]

[dependencies]
clap = { workspace = true }
cql2 = { path = ".." }
cql2-cli = { path = "../cli" }
pyo3 = { version = "0.23.3", features = ["extension-module"] }
pythonize = "0.23.0"
serde_json = "1.0.138"
