[project]
name = "cql2"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.scripts]
cql2 = "cql2:main"

[tool.uv]
dev-dependencies = ["mypy>=1.11.2", "pytest>=8.3.3", "ruff>=0.6.9"]

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"
