[package]
name = "cql2-wasm"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "WASM interface for Common Query Language (CQL2)"
readme = "README.md"
homepage = "https://github.com/developmentseed/cql2-rs"
repository = { workspace = true }
license = { workspace = true }
keywords = ["cql2"]
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cql2 = { path = ".." }
wasm-bindgen = "0.2"
getrandom = { version = "0.4.1", features = ["wasm_js"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

[dependencies.web-sys]
version = "0.3.82"
features = ['Document', 'Element', 'HtmlElement', 'Node', 'Window']

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
js-sys = "0.3"
